Initial Commit; modified kd13-kew-training material